chore: migrate to @location-proofs npm scope
Move from @decentralized-geo to @location-proofs scope to create
a dedicated namespace for location proof plugins.

This signals that plugins are independent, composable components
that form their own ecosystem beyond just Astral/DecentralizedGeo.

Also add repository, homepage, and bugs fields pointing to the
new location-proofs GitHub organization.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,17 @@
 {
-  "name": "@decentralized-geo/plugin-proofmode",
+  "name": "@location-proofs/plugin-proofmode",
   "version": "0.1.0-alpha.0",
   "description": "ProofMode location proof plugin for Astral SDK",
+  "license": "MIT",
+  "author": "Astral Protocol",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/location-proofs/plugin-proofmode.git"
+  },
+  "homepage": "https://github.com/location-proofs/plugin-proofmode#readme",
+  "bugs": {
+    "url": "https://github.com/location-proofs/plugin-proofmode/issues"
+  },
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
